--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,7 @@
 
     <properties>
         <junit.version>4.10</junit.version>
+        <slf4j.version>1.7.2</slf4j.version>
         <spring-beans.version>3.2.1.RELEASE</spring-beans.version>
     </properties>
 
@@ -61,6 +62,27 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-beans</artifactId>
             <version>${spring-beans.version}</version>
+        </dependency>
+
+        <!-- Logging -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>${slf4j.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>${slf4j.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>jcl-over-slf4j</artifactId>
+            <version>${slf4j.version}</version>
+            <scope>runtime</scope>
         </dependency>
 
     </dependencies>
