--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <name>CSVeed</name>
     <description>Java toolkit for mapping CSV-to-Bean mapping and vice versa</description>
     <inceptionYear>2013</inceptionYear>
-    <!--<url>https://github.com/java-openstack/joss</url>-->
+    <url>https://github.com/robert-bor/csveed</url>
 
     <parent>
         <groupId>org.sonatype.oss</groupId>
@@ -30,7 +30,7 @@
     </licenses>
 
     <scm>
-        <!--<url>scm:git://github.com/java-openstack/joss.git/tags/joss-0.7.0</url>-->
+        <url>scm:git://github.com/robert-bor/csveed</url>
         <!--<connection>scm:git:https://github.com/java-openstack/joss.git/tags/joss-0.7.0</connection>-->
     </scm>
 
@@ -45,6 +45,11 @@
         <junit.version>4.10</junit.version>
         <slf4j.version>1.7.2</slf4j.version>
         <spring-beans.version>3.2.1.RELEASE</spring-beans.version>
+        <!-- Reporting -->
+        <maven.cobertura.version>2.5.2</maven.cobertura.version>
+        <maven.javadoc.version>2.8</maven.javadoc.version>
+        <maven.project.version>2.4</maven.project.version>
+        <maven.site.plugin.version>3.1</maven.site.plugin.version>
     </properties>
 
     <dependencies>
@@ -86,5 +91,69 @@
         </dependency>
 
     </dependencies>
+
+    <build>
+
+        <defaultGoal>install</defaultGoal>
+
+        <plugins>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.6</source>
+                    <target>1.6</target>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>cobertura-maven-plugin</artifactId>
+                <version>${maven.cobertura.version}</version>
+                <configuration>
+                    <instrumentation>
+                        <excludes>
+                            <exclude>nl/tweeenveertig/csveed/*.class</exclude>
+                        </excludes>
+                    </instrumentation>
+                    <check />
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-site-plugin</artifactId>
+                <version>${maven.site.plugin.version}</version>
+                <configuration>
+                    <reportPlugins>
+                        <plugin>
+                            <groupId>org.apache.maven.plugins</groupId>
+                            <artifactId>maven-project-info-reports-plugin</artifactId>
+                            <version>${maven.project.version}</version>
+                            <configuration>
+                                <dependencyDetailsEnabled>false</dependencyDetailsEnabled>
+                                <dependencyLocationsEnabled>false</dependencyLocationsEnabled>
+                            </configuration>
+                            <reports>
+                                <report>dependencies</report>
+                                <report>scm</report>
+                            </reports>
+                        </plugin>
+                        <plugin>
+                            <groupId>org.apache.maven.plugins</groupId>
+                            <artifactId>maven-javadoc-plugin</artifactId>
+                            <version>${maven.javadoc.version}</version>
+                        </plugin>
+                        <plugin>
+                            <groupId>org.codehaus.mojo</groupId>
+                            <artifactId>cobertura-maven-plugin</artifactId>
+                            <version>${maven.cobertura.version}</version>
+                        </plugin>
+                    </reportPlugins>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
