--- a/pom.xml
+++ b/pom.xml
@@ -3,12 +3,12 @@
 
     <groupId>nl.tweeenveertig.csveed</groupId>
     <artifactId>csveed</artifactId>
-    <version>0.1.0-SNAPSHOT</version>
+    <version>0.1.0</version>
     <packaging>jar</packaging>
     <name>CSVeed</name>
     <description>Java toolkit for mapping CSV-to-Bean mapping and vice versa</description>
     <inceptionYear>2013</inceptionYear>
-    <url>https://github.com/robert-bor/csveed</url>
+    <url>https://github.com/robert-bor/CSVeed</url>
 
     <parent>
         <groupId>org.sonatype.oss</groupId>
@@ -30,8 +30,8 @@
     </licenses>
 
     <scm>
-        <url>scm:git://github.com/robert-bor/csveed</url>
-        <!--<connection>scm:git:https://github.com/java-openstack/joss.git/tags/joss-0.7.0</connection>-->
+        <url>https://github.com/robert-bor/CSVeed</url>
+        <connection>https://github.com/robert-bor/CSVeed</connection>
     </scm>
 
     <developers>
