--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -2,4 +2,4 @@ log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d %p [%c] %m%n
 
-log4j.rootLogger=INFO, stdout
+log4j.rootLogger=ERROR, stdout
