--- a/pom.xml
+++ b/pom.xml
@@ -62,13 +62,6 @@
             <scope>test</scope>
         </dependency>
 
-        <!-- Used for its excellent set of PropertyEditor classes -->
-        <!--<dependency>-->
-            <!--<groupId>org.springframework</groupId>-->
-            <!--<artifactId>spring-beans</artifactId>-->
-            <!--<version>${spring-beans.version}</version>-->
-        <!--</dependency>-->
-
         <!-- Logging -->
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -115,13 +108,7 @@
                     <instrumentation>
                         <excludes>
                             <exclude>nl/tweeenveertig/csveed/*.class</exclude>
-                            <exclude>nl/tweeenveertig/csveed/bean/conversion/ConversionUtil.class</exclude> <!-- not testing Spring -->
-                            <exclude>nl/tweeenveertig/csveed/bean/conversion/NumberUtils.class</exclude> <!-- not testing Spring -->
-                            <exclude>nl/tweeenveertig/csveed/bean/conversion/CharacterConverter.class</exclude> <!-- not testing Spring -->
-                            <exclude>nl/tweeenveertig/csveed/bean/conversion/CustomBooleanConverter.class</exclude> <!-- not testing Spring -->
-                            <exclude>nl/tweeenveertig/csveed/bean/conversion/CustomNumberConverter.class</exclude> <!-- not testing Spring -->
-                            <exclude>nl/tweeenveertig/csveed/bean/conversion/PatternConverter.class</exclude> <!-- not testing Spring -->
-                            <exclude>nl/tweeenveertig/csveed/bean/conversion/DateConverter.class</exclude> <!-- not testing Spring -->
+                            <exclude>nl/tweeenveertig/csveed/bean/conversion/*.class</exclude> <!-- not testing Spring -->
                         </excludes>
                     </instrumentation>
                     <check />
