--- a/pom.xml
+++ b/pom.xml
@@ -31,8 +31,8 @@
 
     <scm>
         <url>https://github.com/robert-bor/CSVeed</url>
-        <connection>scm:git://github.com/robert-bor/CSVeed</connection>
-        <developerConnection>scm:git://github.com/robert-bor/CSVeed</developerConnection>
+        <connection>scm:git:https://github.com/robert-bor/CSVeed</connection>
+        <developerConnection>scm:git:https://github.com/robert-bor/CSVeed</developerConnection>
     </scm>
 
     <developers>
