--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <groupId>org.sonatype.oss</groupId>
         <artifactId>oss-parent</artifactId>
         <version>9</version>
+        <relativePath />
     </parent>
 
     <organization>
