--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,7 @@
         <maven.compiler.source>1.6</maven.compiler.source>
         <maven.compiler.target>1.6</maven.compiler.target>
 
-        <junit.version>4.12</junit.version>
+        <junit.version>4.12.2</junit.version>
         <slf4j.version>1.7.25</slf4j.version>
 
         <!-- Reporting -->
@@ -61,8 +61,8 @@
 
         <!-- Used for unit testing -->
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
+            <groupId>org.junit.vintage</groupId>
+            <artifactId>junit-vintage-engine</artifactId>
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
