[pom] Update maven-javadoc-plugin to 3.0.0

--- a/pom.xml
+++ b/pom.xml
@@ -54,7 +54,7 @@
 
         <!-- Reporting -->
         <maven.cobertura.version>2.7</maven.cobertura.version>
-        <maven.javadoc.version>3.0.0-M1</maven.javadoc.version>
+        <maven.javadoc.version>3.0.0</maven.javadoc.version>
     </properties>
 
     <dependencies>
