--- a/pom.xml
+++ b/pom.xml
@@ -53,7 +53,7 @@
         <slf4j.version>1.7.25</slf4j.version>
 
         <!-- Reporting -->
-        <maven.cobertura.version>2.7</maven.cobertura.version>
+        <maven.jacoco.version>0.7.9</maven.jacoco.version>
         <maven.javadoc.version>3.0.0</maven.javadoc.version>
     </properties>
 
@@ -136,6 +136,22 @@
             </plugins>
         </pluginManagement>
 
+        <plugins>
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>${maven.jacoco.version}</version>
+                <executions>
+                    <execution>
+                        <id>prepare-agent</id>
+                        <goals>
+                            <goal>prepare-agent</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+        
         <defaultGoal>install</defaultGoal>
     </build>
 
@@ -143,18 +159,17 @@
         <plugins>
 
             <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>cobertura-maven-plugin</artifactId>
-                <version>${maven.cobertura.version}</version>
-                <configuration>
-                    <instrumentation>
-                        <excludes>
-                            <exclude>org/csveed/*.class</exclude>
-                            <exclude>org/csveed/bean/conversion/*.class</exclude> <!-- not testing Spring -->
-                        </excludes>
-                    </instrumentation>
-                    <check />
-                </configuration>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>${maven.jacoco.version}</version>
+                <reportSets>
+                    <reportSet>
+                        <reports>
+                            <!-- select non-aggregate reports -->
+                            <report>report</report>
+                        </reports>
+                    </reportSet>
+                </reportSets>
             </plugin>
 
             <plugin>
