--- a/pom.xml
+++ b/pom.xml
@@ -48,8 +48,8 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
 
-        <slf4j.version>1.8.0-beta2</slf4j.version>
         <junit.version>5.5.1</junit.version>
+        <slf4j.version>2.0.0-alpha0</slf4j.version>
     </properties>
 
     <dependencies>
