--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
     <groupId>com.github.hazendaz</groupId>
     <artifactId>csveed</artifactId>
-    <version>0.7.0</version>
+    <version>0.7.1-SNAPSHOT</version>
 
     <name>CSVeed</name>
     <description>Java toolkit for mapping CSV-to-Bean mapping and vice versa</description>
@@ -35,7 +35,7 @@
         <url>https://github.com/robert-bor/CSVeed</url>
         <connection>scm:git:https://github.com/robert-bor/CSVeed</connection>
         <developerConnection>scm:git:https://github.com/robert-bor/CSVeed</developerConnection>
-        <tag>csveed-0.7.0</tag>
+        <tag>HEAD</tag>
     </scm>
     <issueManagement>
         <system>GitHub Issue Management</system>
