[site] Add in redirection to main site page for consumers

--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     <version>0.7.1-SNAPSHOT</version>
 
     <name>CSVeed</name>
-    <description>Java toolkit for mapping CSV-to-Bean mapping and vice versa</description>
+    <description>Java toolkit for mapping CSV-to-Bean mapping and vice versa.  Redirection to Introduction in 5 seconds!</description>
     <inceptionYear>2013</inceptionYear>
     <url>http://csveed.org</url>
 
