--- a/pom.xml
+++ b/pom.xml
@@ -32,10 +32,10 @@
     </licenses>
 
     <scm>
+        <connection>scm:git:ssh://git@github.com/42BV/CSVeed.git</connection>
+        <developerConnection>scm:git:ssh://git@github.com/42BV/CSVeed.git</developerConnection>
         <url>https://github.com/42BV/CSVeed</url>
-        <connection>scm:git:https://github.com/42BV/CSVeed</connection>
-        <developerConnection>scm:git:https://github.com/42BV/CSVeed</developerConnection>
-        <tag>csveed-0.7.2</tag>
+        <tag>HEAD</tag>
     </scm>
     <issueManagement>
         <system>GitHub Issue Management</system>
@@ -47,9 +47,9 @@
     </ciManagement>
     <distributionManagement>
         <site>
-            <id>gh-pages</id>
+            <id>gh-pages-scm</id>
             <name>GitHub Pages</name>
-            <url>github:https://robert-bor.github.io/CSVeed/</url>
+            <url>scm:git:ssh://git@github.com/42BV/CSVeed.git</url>
         </site>
     </distributionManagement>
 
