--- a/pom.xml
+++ b/pom.xml
@@ -65,7 +65,7 @@
         <maven.compiler.target>1.8</maven.compiler.target>
 
         <junit.version>5.8.2</junit.version>
-        <slf4j.version>2.0.0-alpha6</slf4j.version>
+        <slf4j.version>1.7.33</slf4j.version>
     </properties>
 
     <dependencies>
