--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
 
     <groupId>org.csveed</groupId>
     <artifactId>csveed</artifactId>
-    <version>0.7.5-SNAPSHOT</version>
+    <version>0.7.5</version>
 
     <name>CSVeed</name>
     <description>Java toolkit for mapping CSV-to-Bean mapping and vice versa.  Redirection to Introduction in 5 seconds!</description>
@@ -47,7 +47,7 @@
         <connection>scm:git:ssh://git@github.com/42BV/CSVeed.git</connection>
         <developerConnection>scm:git:ssh://git@github.com/42BV/CSVeed.git</developerConnection>
         <url>https://github.com/42BV/CSVeed</url>
-        <tag>HEAD</tag>
+        <tag>csveed-0.7.5</tag>
     </scm>
     <issueManagement>
         <system>GitHub Issue Management</system>
