[pom] Fix <name> tag to match <artifactId>

--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
     <artifactId>csveed</artifactId>
     <version>0.7.6-SNAPSHOT</version>
 
-    <name>CSVeed</name>
+    <name>csveed</name>
     <description>Java toolkit for mapping CSV-to-Bean mapping and vice versa.  Redirection to Introduction in 5 seconds!</description>
     <inceptionYear>2013</inceptionYear>
     <url>http://csveed.org</url>
